fml/client/dtmath/gen/dtmath_grammarParser.py
# Generated from /home/phdk/PycharmProjects/fml/fml/client/dtmath/dtmath_grammar.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class dtmath_grammarParser ( Parser ):

    grammarFileName = "dtmath_grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'-'", "'+'", "'.'", "'/'", 
                     "':'", "'mon'", "'man'", "'monday'", "'mandag'", "'tue'", 
                     "'tir'", "'tuesday'", "'tirsdag'", "'wed'", "'ons'", 
                     "'wednesday'", "'onsdag'", "'thu'", "'tor'", "'thursday'", 
                     "'torsdag'", "'fri'", "'fre'", "'friday'", "'fredag'", 
                     "'sat'", "'l\u00F8r'", "'saturday'", "'l\u00F8rdag'", 
                     "'sun'", "'s\u00F8n'", "'sunday'", "'s\u00F8ndag'", 
                     "'jan'", "'january'", "'januar'", "'feb'", "'february'", 
                     "'februar'", "'mar'", "'march'", "'marts'", "'apr'", 
                     "'april'", "'may'", "'maj'", "'jun'", "'june'", "'juni'", 
                     "'jul'", "'july'", "'juli'", "'aug'", "'august'", "'sep'", 
                     "'september'", "'oct'", "'okt'", "'october'", "'oktober'", 
                     "'nov'", "'november'", "'dec'", "'december'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'nt'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "QUAD", "PAIR", 
                      "SINGLE", "BIGNUMBER", "NOW", "NOW_TIME", "DIVIDER", 
                      "SECOND", "MINUTE", "HOUR", "DAY", "WHITESPACE", "ERRORCHARACTER" ]

    RULE_start = 0
    RULE_operation = 1
    RULE_time = 2
    RULE_delta_time = 3
    RULE_delta_time_unit = 4
    RULE_delta_unit = 5
    RULE_abs_time = 6
    RULE_day = 7
    RULE_month = 8
    RULE_year = 9
    RULE_timeofday = 10
    RULE_duo = 11
    RULE_weekday = 12
    RULE_month_name = 13
    RULE_any_number = 14

    ruleNames =  [ "start", "operation", "time", "delta_time", "delta_time_unit", 
                   "delta_unit", "abs_time", "day", "month", "year", "timeofday", 
                   "duo", "weekday", "month_name", "any_number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    QUAD=67
    PAIR=68
    SINGLE=69
    BIGNUMBER=70
    NOW=71
    NOW_TIME=72
    DIVIDER=73
    SECOND=74
    MINUTE=75
    HOUR=76
    DAY=77
    WHITESPACE=78
    ERRORCHARACTER=79

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operation(self):
            return self.getTypedRuleContext(dtmath_grammarParser.OperationContext,0)


        def EOF(self):
            return self.getToken(dtmath_grammarParser.EOF, 0)

        def getRuleIndex(self):
            return dtmath_grammarParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = dtmath_grammarParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.operation(0)
            self.state = 31
            self.match(dtmath_grammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return dtmath_grammarParser.RULE_operation

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AdditionOperationContext(OperationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dtmath_grammarParser.OperationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dtmath_grammarParser.OperationContext)
            else:
                return self.getTypedRuleContext(dtmath_grammarParser.OperationContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditionOperation" ):
                listener.enterAdditionOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditionOperation" ):
                listener.exitAdditionOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdditionOperation" ):
                return visitor.visitAdditionOperation(self)
            else:
                return visitor.visitChildren(self)


    class SubtractionOperationContext(OperationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dtmath_grammarParser.OperationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dtmath_grammarParser.OperationContext)
            else:
                return self.getTypedRuleContext(dtmath_grammarParser.OperationContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubtractionOperation" ):
                listener.enterSubtractionOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubtractionOperation" ):
                listener.exitSubtractionOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubtractionOperation" ):
                return visitor.visitSubtractionOperation(self)
            else:
                return visitor.visitChildren(self)


    class ParenthesisOperationContext(OperationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dtmath_grammarParser.OperationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operation(self):
            return self.getTypedRuleContext(dtmath_grammarParser.OperationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenthesisOperation" ):
                listener.enterParenthesisOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenthesisOperation" ):
                listener.exitParenthesisOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenthesisOperation" ):
                return visitor.visitParenthesisOperation(self)
            else:
                return visitor.visitChildren(self)


    class TimeOperationContext(OperationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dtmath_grammarParser.OperationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def time(self):
            return self.getTypedRuleContext(dtmath_grammarParser.TimeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimeOperation" ):
                listener.enterTimeOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimeOperation" ):
                listener.exitTimeOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimeOperation" ):
                return visitor.visitTimeOperation(self)
            else:
                return visitor.visitChildren(self)



    def operation(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = dtmath_grammarParser.OperationContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_operation, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [dtmath_grammarParser.T__4, dtmath_grammarParser.T__7, dtmath_grammarParser.T__8, dtmath_grammarParser.T__9, dtmath_grammarParser.T__10, dtmath_grammarParser.T__11, dtmath_grammarParser.T__12, dtmath_grammarParser.T__13, dtmath_grammarParser.T__14, dtmath_grammarParser.T__15, dtmath_grammarParser.T__16, dtmath_grammarParser.T__17, dtmath_grammarParser.T__18, dtmath_grammarParser.T__19, dtmath_grammarParser.T__20, dtmath_grammarParser.T__21, dtmath_grammarParser.T__22, dtmath_grammarParser.T__23, dtmath_grammarParser.T__24, dtmath_grammarParser.T__25, dtmath_grammarParser.T__26, dtmath_grammarParser.T__27, dtmath_grammarParser.T__28, dtmath_grammarParser.T__29, dtmath_grammarParser.T__30, dtmath_grammarParser.T__31, dtmath_grammarParser.T__32, dtmath_grammarParser.T__33, dtmath_grammarParser.T__34, dtmath_grammarParser.QUAD, dtmath_grammarParser.PAIR, dtmath_grammarParser.SINGLE, dtmath_grammarParser.BIGNUMBER, dtmath_grammarParser.NOW, dtmath_grammarParser.NOW_TIME, dtmath_grammarParser.SECOND, dtmath_grammarParser.MINUTE, dtmath_grammarParser.HOUR, dtmath_grammarParser.DAY]:
                localctx = dtmath_grammarParser.TimeOperationContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 34
                self.time()
                pass
            elif token in [dtmath_grammarParser.T__0]:
                localctx = dtmath_grammarParser.ParenthesisOperationContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 35
                self.match(dtmath_grammarParser.T__0)
                self.state = 36
                self.operation(0)
                self.state = 37
                self.match(dtmath_grammarParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 49
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 47
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = dtmath_grammarParser.SubtractionOperationContext(self, dtmath_grammarParser.OperationContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_operation)
                        self.state = 41
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 42
                        self.match(dtmath_grammarParser.T__2)
                        self.state = 43
                        self.operation(3)
                        pass

                    elif la_ == 2:
                        localctx = dtmath_grammarParser.AdditionOperationContext(self, dtmath_grammarParser.OperationContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_operation)
                        self.state = 44
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 45
                        self.match(dtmath_grammarParser.T__3)
                        self.state = 46
                        self.operation(2)
                        pass

             
                self.state = 51
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return dtmath_grammarParser.RULE_time

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TimeAbsContext(TimeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dtmath_grammarParser.TimeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def abs_time(self):
            return self.getTypedRuleContext(dtmath_grammarParser.Abs_timeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimeAbs" ):
                listener.enterTimeAbs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimeAbs" ):
                listener.exitTimeAbs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimeAbs" ):
                return visitor.visitTimeAbs(self)
            else:
                return visitor.visitChildren(self)


    class TimeDeltaContext(TimeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dtmath_grammarParser.TimeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def delta_time(self):
            return self.getTypedRuleContext(dtmath_grammarParser.Delta_timeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimeDelta" ):
                listener.enterTimeDelta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimeDelta" ):
                listener.exitTimeDelta(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimeDelta" ):
                return visitor.visitTimeDelta(self)
            else:
                return visitor.visitChildren(self)



    def time(self):

        localctx = dtmath_grammarParser.TimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_time)
        try:
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = dtmath_grammarParser.TimeAbsContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.abs_time()
                pass

            elif la_ == 2:
                localctx = dtmath_grammarParser.TimeDeltaContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.delta_time(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Delta_timeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return dtmath_grammarParser.RULE_delta_time

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class DeltaTimeNowContext(Delta_timeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dtmath_grammarParser.Delta_timeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOW_TIME(self):
            return self.getToken(dtmath_grammarParser.NOW_TIME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeltaTimeNow" ):
                listener.enterDeltaTimeNow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeltaTimeNow" ):
                listener.exitDeltaTimeNow(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeltaTimeNow" ):
                return visitor.visitDeltaTimeNow(self)
            else:
                return visitor.visitChildren(self)


    class DeltaTimeSingleContext(Delta_timeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dtmath_grammarParser.Delta_timeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def delta_time_unit(self):
            return self.getTypedRuleContext(dtmath_grammarParser.Delta_time_unitContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeltaTimeSingle" ):
                listener.enterDeltaTimeSingle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeltaTimeSingle" ):
                listener.exitDeltaTimeSingle(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeltaTimeSingle" ):
                return visitor.visitDeltaTimeSingle(self)
            else:
                return visitor.visitChildren(self)


    class DeltaTimeChainContext(Delta_timeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dtmath_grammarParser.Delta_timeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def delta_time(self):
            return self.getTypedRuleContext(dtmath_grammarParser.Delta_timeContext,0)

        def delta_time_unit(self):
            return self.getTypedRuleContext(dtmath_grammarParser.Delta_time_unitContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeltaTimeChain" ):
                listener.enterDeltaTimeChain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeltaTimeChain" ):
                listener.exitDeltaTimeChain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeltaTimeChain" ):
                return visitor.visitDeltaTimeChain(self)
            else:
                return visitor.visitChildren(self)



    def delta_time(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = dtmath_grammarParser.Delta_timeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_delta_time, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [dtmath_grammarParser.QUAD, dtmath_grammarParser.PAIR, dtmath_grammarParser.SINGLE, dtmath_grammarParser.BIGNUMBER, dtmath_grammarParser.SECOND, dtmath_grammarParser.MINUTE, dtmath_grammarParser.HOUR, dtmath_grammarParser.DAY]:
                localctx = dtmath_grammarParser.DeltaTimeSingleContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 57
                self.delta_time_unit()
                pass
            elif token in [dtmath_grammarParser.NOW_TIME]:
                localctx = dtmath_grammarParser.DeltaTimeNowContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 58
                self.match(dtmath_grammarParser.NOW_TIME)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 65
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = dtmath_grammarParser.DeltaTimeChainContext(self, dtmath_grammarParser.Delta_timeContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_delta_time)
                    self.state = 61
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 62
                    self.delta_time_unit() 
                self.state = 67
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Delta_time_unitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return dtmath_grammarParser.RULE_delta_time_unit

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DeltaValueFirstContext(Delta_time_unitContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dtmath_grammarParser.Delta_time_unitContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def any_number(self):
            return self.getTypedRuleContext(dtmath_grammarParser.Any_numberContext,0)

        def delta_unit(self):
            return self.getTypedRuleContext(dtmath_grammarParser.Delta_unitContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeltaValueFirst" ):
                listener.enterDeltaValueFirst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeltaValueFirst" ):
                listener.exitDeltaValueFirst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeltaValueFirst" ):
                return visitor.visitDeltaValueFirst(self)
            else:
                return visitor.visitChildren(self)


    class DeltaUnitFirstContext(Delta_time_unitContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dtmath_grammarParser.Delta_time_unitContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def delta_unit(self):
            return self.getTypedRuleContext(dtmath_grammarParser.Delta_unitContext,0)

        def any_number(self):
            return self.getTypedRuleContext(dtmath_grammarParser.Any_numberContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeltaUnitFirst" ):
                listener.enterDeltaUnitFirst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeltaUnitFirst" ):
                listener.exitDeltaUnitFirst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeltaUnitFirst" ):
                return visitor.visitDeltaUnitFirst(self)
            else:
                return visitor.visitChildren(self)



    def delta_time_unit(self):

        localctx = dtmath_grammarParser.Delta_time_unitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_delta_time_unit)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [dtmath_grammarParser.SECOND, dtmath_grammarParser.MINUTE, dtmath_grammarParser.HOUR, dtmath_grammarParser.DAY]:
                localctx = dtmath_grammarParser.DeltaUnitFirstContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.delta_unit()
                self.state = 69
                self.any_number()
                pass
            elif token in [dtmath_grammarParser.QUAD, dtmath_grammarParser.PAIR, dtmath_grammarParser.SINGLE, dtmath_grammarParser.BIGNUMBER]:
                localctx = dtmath_grammarParser.DeltaValueFirstContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.any_number()
                self.state = 72
                self.delta_unit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Delta_unitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return dtmath_grammarParser.RULE_delta_unit

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DeltaSecondContext(Delta_unitContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dtmath_grammarParser.Delta_unitContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SECOND(self):
            return self.getToken(dtmath_grammarParser.SECOND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeltaSecond" ):
                listener.enterDeltaSecond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeltaSecond" ):
                listener.exitDeltaSecond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeltaSecond" ):
                return visitor.visitDeltaSecond(self)
            else:
                return visitor.visitChildren(self)


    class DeltaMinuteContext(Delta_unitContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dtmath_grammarParser.Delta_unitContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MINUTE(self):
            return self.getToken(dtmath_grammarParser.MINUTE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeltaMinute" ):
                listener.enterDeltaMinute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeltaMinute" ):
                listener.exitDeltaMinute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeltaMinute" ):
                return visitor.visitDeltaMinute(self)
            else:
                return visitor.visitChildren(self)


    class DeltaDayContext(Delta_unitContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dtmath_grammarParser.Delta_unitContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DAY(self):
            return self.getToken(dtmath_grammarParser.DAY, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeltaDay" ):
                listener.enterDeltaDay(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeltaDay" ):
                listener.exitDeltaDay(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeltaDay" ):
                return visitor.visitDeltaDay(self)
            else:
                return visitor.visitChildren(self)


    class DeltaHourContext(Delta_unitContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dtmath_grammarParser.Delta_unitContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def HOUR(self):
            return self.getToken(dtmath_grammarParser.HOUR, 0)
